--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
         <title>Women 2 Women</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="http://allfont.ru/allfont.css?fonts=pt-serif-caption" rel="stylesheet" type="text/css" />
-        <link
-            href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext"
+        <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext"
             rel="stylesheet">
         <!-- Theme style -->
         <link rel="stylesheet" href="css/normalize.css">
