--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <!-- Header -->
         <header class="header">
-            <video autoplay loop>
+            <video preload="auto" autoplay="true" loop="true" muted="muted">
                 <source src="video/videofon.mp4" type="video/mp4">
             </video>
             <div class="temno"></div>
