--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
                 <source src="video/videofon.mp4" type="video/mp4">
             </video>
             <div class="temno"></div>
-            <div class="line"><img src="image/header/Линии.png" alt=""></div>
+            <div class="line"><img src="image/header/Линии.png" alt="" class="lazy"></div>
             <div class="navbar-collapse row" id="navbarSupportedContent">
                 <div class="col-7 col1">
                 </div>
                 <div class="col-5 col2">
-                    <button type="button" class="nav_close" data-dismiss="modal" aria-label="Close"><img src="image/close.png"
-                            alt="close"></button>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <hr class="line-nav-link">
@@ -108,10 +106,12 @@
                         <a class="navbar-brand" href="index.html"><img src="image/logo.png" alt="logo"></a>
                         <div class="navbar-phone">
                             <a href="tel: +7 (968) 088-55-77 " class="header-phone">+7 (968) 088-55-77</a>
-                            <button class="navbar-toggler" type="button">
-                                <img src="image/icon-menu.png" alt="icon-menu" class="icon-menu">
-                                <img src="image/menu-hover.png" alt="icon-menu-hover" class="icon-menu-hover">
-                            </button>
+                            <div id="menuToggle" class="navbar-toggler">
+                                <input type="checkbox" class="" />
+                                <span id="span1"></span>
+                                <span id="span2"></span>
+                                <span id="span3"></span>
+                            </div>
                         </div>
                     </nav>
                     <div class="header_mane">
@@ -260,36 +260,34 @@
             <div class="container">
                 <div class="section-unic-content">
                     <div class="carts">
-                        <div class="carts-content">
-                            <div class="row1">
-                                <div class="cart cart-unic cart1">
-                                    <h1>Уникальность образовательного формата WOMEN2WOMEN</h1>
-                                </div>
-                                <div class="cart cart-unic cart2">
-                                    <p class="number">01.</p>
-                                    <h3 class="cart-title">Многотысячная аудитория</h3>
-                                    <hr>
-                                    <p class="cart-text">Наш проект уже объединил тысячи единомышленниц, в кругу которых вы сможете решить любой
-                                        свой вопрос мгновенно</p>
-                                </div>
+                        <div class="row1">
+                            <div class="cart cart-unic cart1">
+                                <h1>Уникальность образовательного формата WOMEN2WOMEN</h1>
                             </div>
-                            <div class="row2">
-                                <div class="cart cart-unic cart3">
-                                    <p class="number">02.</p>
-                                    <h3 class="cart-title">Авторская методика</h3>
-                                    <hr>
-                                    <p class="cart-text">Образовательный формат WOMEN2WOMEN разработан по уникальной методике передачи знаний от
-                                        женщин к женщинам. Именно женщина лучше всего на своем примере расскажет, как совмещать семью и свое дело
-                                    </p>
-                                </div>
-                                <div class="cart cart-unic cart4">
-                                    <p class="number">03.</p>
-                                    <h3 class="cart-title">Новый формат</h3>
-                                    <hr>
-                                    <p class="cart-text">Мы создали качественно новый формат образования, отличный от традиционного обучения, в
-                                        котором любая женщина сможет почувствовать себя комфортно и получить необходимую поддержку. Вам не нужно
-                                        будет думать о том, как не выглядеть смешно или глупо в глазах мужчин - будьте сами собой!</p>
-                                </div>
+                            <div class="cart cart-unic cart2">
+                                <p class="number">01.</p>
+                                <h3 class="cart-title">Многотысячная аудитория</h3>
+                                <hr>
+                                <p class="cart-text">Наш проект уже объединил тысячи единомышленниц, в кругу которых вы сможете решить любой
+                                    свой вопрос мгновенно</p>
+                            </div>
+                        </div>
+                        <div class="row2">
+                            <div class="cart cart-unic cart3">
+                                <p class="number">02.</p>
+                                <h3 class="cart-title">Авторская методика</h3>
+                                <hr>
+                                <p class="cart-text">Образовательный формат WOMEN2WOMEN разработан по уникальной методике передачи знаний от
+                                    женщин к женщинам. Именно женщина лучше всего на своем примере расскажет, как совмещать семью и свое дело
+                                </p>
+                            </div>
+                            <div class="cart cart-unic cart4">
+                                <p class="number">03.</p>
+                                <h3 class="cart-title">Новый формат</h3>
+                                <hr>
+                                <p class="cart-text">Мы создали качественно новый формат образования, отличный от традиционного обучения, в
+                                    котором любая женщина сможет почувствовать себя комфортно и получить необходимую поддержку. Вам не нужно
+                                    будет думать о том, как не выглядеть смешно или глупо в глазах мужчин - будьте сами собой!</p>
                             </div>
                         </div>
                     </div>
@@ -377,6 +375,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script src="js/jquery.lazy.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 
